# autoremesher

./: CMakeLists.txt  appveyor.yml
scripts/: build-debug.cmd  build.cmd  clear.cmd
src/: main.cpp  quadmeshgenerator.cpp  quadmeshgenerator.h
src/AutoRemesher/: meshseparator.cpp  meshseparator.h  vdbremesher.cpp  vector3.h
